--- a/data/2023_02_10/lCfOQI.yaml
+++ b/data/2023_02_10/lCfOQI.yaml
@@ -1,7 +1,7 @@
 ####################################
 # 创建者：v2rayse.com
 # 客户端：Clash
-# 创建时间：2023-04-21 08:25:51
+# 创建时间：2023-04-21 08:30:34
 # 使用模版：ACL4SSR_AdblockPlus.ini
 # 节点数量：7
 ####################################
@@ -21,7 +21,7 @@ dns:
     - tls://dns.google:853
 
 proxies:
-  - {"name":"UCLOUD_HKPRO","type":"vless","server":"45.11.185.246.globalssh.cn","port":60008,"uuid":"1d998338-43de-4321-f2a8-ff6eb5f5987d","tls":false,"network":"tcp"}
+  - {"name":"ucloud","type":"vmess","server":"45.11.185.246.globalssh.cn","port":60008,"cipher":"auto","uuid":"f2f3837e-8f33-44f7-c714-5357d5220ba8","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp"}
   - {"name":"深新","type":"ss","server":"ucsg555-dsf65.inkcdn.cc","port":60001,"password":"Zb9TRWw2gJoKeyLb","cipher":"aes-256-gcm"}
   - {"name":"京德","type":"ss","server":"bd-f85d-5eagtir0.tianziyu.com","port":60001,"password":"ZdNVMOMUlNwEP0CY","cipher":"aes-256-gcm"}
   - {"name":"hkpro","type":"ss","server":"uchk-zf-77gd4.inkiwike.com","port":60005,"password":"FfoHE4vgvx","cipher":"aes-256-gcm"}
@@ -34,7 +34,7 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - UCLOUD_HKPRO
+      - ''
       - 深新
       - 京德
       - hkpro
@@ -47,7 +47,7 @@ proxy-groups:
     interval: 300
     tolerance: 50
     proxies:
-      - UCLOUD_HKPRO
+      - ''
       - 深新
       - 京德
       - hkpro
@@ -60,7 +60,7 @@ proxy-groups:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - UCLOUD_HKPRO
+      - ''
       - 深新
       - 京德
       - hkpro
@@ -72,7 +72,7 @@ proxy-groups:
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - UCLOUD_HKPRO
+      - ''
       - 深新
       - 京德
       - hkpro
@@ -84,7 +84,7 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - UCLOUD_HKPRO
+      - ''
       - 深新
       - 京德
       - hkpro
@@ -96,7 +96,7 @@ proxy-groups:
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - UCLOUD_HKPRO
+      - ''
       - 深新
       - 京德
       - hkpro
@@ -130,7 +130,7 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - UCLOUD_HKPRO
+      - ''
       - 深新
       - 京德
       - hkpro
