--- a/data/2023_02_10/lCfOQI.yaml
+++ b/data/2023_02_10/lCfOQI.yaml
@@ -39,7 +39,7 @@ proxy-groups:
       - 京德
   - name: ♻️ 自动选择
     type: url-test
-    url: http://www.gstatic.com/generate_204
+    url: hhttp://www.google.com/generate_204
     interval: 30
     tolerance: 10
     proxies:
